Modificado all roles

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = inventory
+inventory = aws_ec2.yml
 roles_path = roles
 deprecation_warnings = False
 ansible_python_interpreter=/usr/bin/python3
