--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -2,10 +2,12 @@
 # tasks file for python
 - name: Install required dependencies
   apt: 
+    update_cache: yes
     name: "{{ item }}" 
     state: present
   with_items:
-    - python-setuptools
+    - python
+    - python3-setuptools
     - python3-dev
     - default-libmysqlclient-dev
     - python3-pymysql
